<resources>
    <string name="app_name">Rough Diamond Estimate</string>
    <string name="rafano_bhav_keret">રફનો ભાવ / કેરેટ :</string>
    <string name="rafanu_rijalt_keret">રફનું રિજલ્ટ % માં :</string>
    <string name="size_diamond">સાઈઝ :</string>
    <string name="majuri_diamond">મજૂરી :</string>
    <string name="polish_ni_padater">પોલિશની પડતર =</string>
    <string name="polish_diamond_result">પોલિશનું રિજલ્ટ % માં :</string>
    <string name="profit_in_percentage">લેસ / નફો % માં :</string>
    <string name="Rs">\u20B9</string>
    <string name="taka">%</string>
    <string name="pcs">pcs</string>
    <string name="_1000">10000</string>
    <string name="reset">Reset</string>
    <string name="get_rate">get Rate</string>
    <string name="endPriceSymbol">/-</string>
    <string name="_2000">2000</string>
    <string name="_35">35</string>
    <string name="_30">30</string>
    <string name="_50">50</string>
    <string name="_32">32</string>
    <string name="_10">10</string>
    <string name="kat_number">કટ નંબર </string>
    <string name="get_kat_information">કટ વિશે મેરવો</string>
    <string name="katnustatus">કટ નું સ્ટૅટ્સ</string>
    <string name="date">તારીખ</string>
    <string name="paltyName">પાર્ટી નામ</string>
    <string name="deposit">જમા</string>
    <string name="no">no.</string>
    <string name="withdrawal">ઉપાડ</string>
    <string name="detail">વિગત</string>
    <string name="send">મોકલો</string>
    <string name="totalamount">ટોટલ રકમ :</string>
    <string name="enter_details">વિગત નાખો.</string>
    <string name="main_kat_no">મૈન કટ no.</string>
    <string name="kat_name">કટ નામ</string>
    <string name="maine_weight">મૈન વજન</string>
    <string name="bag">થેલી</string>
    <string name="weight">વજન</string>
    <string name="price">ભાવ</string>
    <string name="dollar_price">ડોલર</string>
    <string name="brokerage_price">દલાલી</string>
    <string name="brokeragePercentage">દલાલી %</string>
    <string name="selling_price">વેચ વાનો નો ભાવ</string>
    <string name="india_rs_symbol">₹</string>
    <string name="number_weight">નંબર વજન</string>
    <string name="number_price">નંબર ભાવ</string>
    <string name="number_percentage">નંબર %</string>
    <string name="number_rate">નંબર ₹</string>
    <string name="final_price">ફાઈનલ ભાવ</string>
    <string name="month">મહિનો</string>
    <string name="total_price">ટોટલ ભાવ</string>
    <string name="money">પૈસા</string>
    <string name="raw_cut">કાચી કટ</string>
    <string name="search">શોધો.</string>
    <string name="enter_the_new_cut">નવી કટ નાખો.</string>
    <string name="f_bhav">f bhav</string>
    <string name="brokerName">દલાલ નામ</string>
    <string name="days">દિવસ</string>
    <string name="ok">Ok</string>

    <!--start kachi_cat-->
    <string name="sKaWeight">સ કા.વજન</string>
    <string name="sToWeight">સ તૈ.વજન</string>
    <string name="soKaWeight">સો કા.વજન</string>
    <string name="soToWeight">સો તૈ.વજન</string>
    <string name="rowWeight">કાચું વજન</string>
    <string name="w_1">w-1</string>
    <string name="w_2">w-2</string>
    <string name="w_3">w-3</string>
    <string name="palet">પ્લેટ</string>
    <string name="total">ટોટલ</string>
    <string name="other_hp_out">other/hp આઉટ</string>
    <string name="after_total">બાદ ટોટલ</string>
    <string name="total_nag">ટોટલ નંગ</string>
    <string name="total_Weight">ટોટલ વજન</string>
    <string name="row_ready">કાચી તૈયાર</string>

    <!--Ready Cat-->
    <string name="sum_after_total">sum બાદ ટોટલ</string>
    <string name="sum_4p_ok_number">sum 4P OK નંગ</string>
    <string name="sum_4p_ok_weight">sum 4P OK વજન</string>
    <string name="avg_print_p">avg પ્રિન્ટ %</string>
    <string name="avg_w_1_p">avg w-1%</string>
    <string name="avg_w_2_p">avg w-2%</string>
    <string name="avg_w_3_p">avg w-3%</string>
    <string name="avg_goli_p">avg goli%</string>
    <string name="avg_a_p">avg a+%</string>
    <string name="avg_palsa_p">avg palsa%</string>
    <string name="avg_goli">avg goli</string>
    <string name="avg_a">avg a+</string>
    <string name="avg_palsa">avg palsa</string>
    <string name="avg_new">avg new</string>
    <string name="sum_pata_number">sum પટ્ટા નંગ</string>
    <string name="sum_pata_weight">sum પટ્ટા વજન</string>
    <string name="avg_file_p">avg ફાઇનલ %</string>
    <string name="sum_to_weight">sum તૈ વજન</string>
    <string name="sum_to_number">sum તૈ નંગ</string>
    <string name="sum_1">sum 1</string>
    <string name="sum_2">sum 2</string>
    <string name="sum_3">sum 3</string>
    <string name="sum_row_number">sum કાચા નંગ</string>
    <string name="sum_row_weight">sum કાચું વજન</string>
    <string name="sum_ready_number">sum તૈયાર નંગ</string>
    <string name="sum_ready_weight">sum તૈયાર વજન</string>

    <string name="tiyar_ve">તીયાર વે</string>
    <string name="ve_weight">વે વજન</string>
    <string name="percentage">-%</string>
    <string name="payment">પેમેન્ટ</string>
    <string name="perotti">પેરોટી</string>
    <string name="after_brokerage">દલાલી બાદ</string>
    <string name="cvd">CVD</string>
    <string name="payment_detail">પેમેન્ટ વિગત</string>
    <string name="kat">કટ</string>
    <string name="p">%</string>
    <string name="kat_ni_entry_karo">કટ ની એન્ટ્રી  કરો</string>
    <string name="main_kachi_kat">મૈન કાચી કટ</string>
    <string name="main_ready_kat">મૈન તૈયાર કટ</string>
</resources>