<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".uiComponents.activity.TaiyarVeListingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/SingleTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:hint="@string/search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:lines="1"
                android:theme="@style/textViewAndEditText"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/enterDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/enter_the_new_cut"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            tools:ignore="RelativeOverlap,VisualLintButtonSize" />

    </LinearLayout>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="VisualLintBounds">

            <include layout="@layout/horizontal_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:orientation="horizontal">

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/date"
                    android:theme="@style/textViewForTableLayout" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/no"
                    android:theme="@style/textViewForTableLayout"
                    tools:ignore="TextSizeCheck" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/weight"
                    android:theme="@style/textViewForTableLayout" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/ve_weight"
                    android:theme="@style/textViewForTableLayout" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/price"
                    android:theme="@style/textViewForTableLayout" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/percentage"
                    android:theme="@style/textViewForTableLayout" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/payment"
                    android:theme="@style/textViewForTableLayout" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/perotti"
                    android:theme="@style/textViewForTableLayout" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/paltyName"
                    android:theme="@style/textViewForTableLayout"
                    tools:ignore="TextSizeCheck" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/brokerName"
                    android:theme="@style/textViewForTableLayout"
                    tools:ignore="TextSizeCheck" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/days"
                    android:theme="@style/textViewForTableLayout"
                    tools:ignore="TextSizeCheck" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/cvd"
                    android:theme="@style/textViewForTableLayout"
                    tools:ignore="TextSizeCheck" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/brokeragePercentage"
                    android:theme="@style/textViewForTableLayout"
                    tools:ignore="TextSizeCheck" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/brokerage_price"
                    android:theme="@style/textViewForTableLayout"
                    tools:ignore="TextSizeCheck" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/after_brokerage"
                    android:theme="@style/textViewForTableLayout" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/payment_detail"
                    android:theme="@style/textViewForTableLayout" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/detail"
                    android:theme="@style/textViewForTableLayout" />

                <include layout="@layout/vertical_view" />

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="match_parent"
                    android:text="@string/ok"
                    android:theme="@style/textViewForTableLayout" />

                <include layout="@layout/vertical_view" />

            </LinearLayout>

            <include layout="@layout/horizontal_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPartyHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/list_of_taiyar_ve" />


        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>