<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".uiComponents.activity.RawCutDetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_10sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutDate"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:theme="@style/textViewAndEditText"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_kat_no">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mainKatNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:theme="@style/textViewAndEditText"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:theme="@style/textViewAndEditText"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kat_name">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/katName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:theme="@style/textViewAndEditText"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/maine_weight">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/maineWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:theme="@style/textViewAndEditText"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bag">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:theme="@style/textViewAndEditText"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:theme="@style/textViewAndEditText"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:theme="@style/textViewAndEditText"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/dollarPrice"
                style="@style/editTextFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_color_6a1b9a_1sdp_r_10sdp"
                android:hint="@string/dollar_price"
                android:inputType="numberDecimal"
                tools:ignore="Autofill,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/brokeragePrice"
                style="@style/editTextFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_color_6a1b9a_1sdp_r_10sdp"
                android:hint="@string/brokerage_price"
                android:inputType="numberDecimal"
                tools:ignore="Autofill,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/sellingPrice"
                style="@style/editTextFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_color_6a1b9a_1sdp_r_10sdp"
                android:hint="@string/india_rs_symbol"
                android:inputType="numberDecimal"
                tools:ignore="Autofill,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/totalPrice"
                style="@style/editTextFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_color_6a1b9a_1sdp_r_10sdp"
                android:hint="@string/total_price"
                android:inputType="numberDecimal"
                tools:ignore="Autofill,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/numberWeight"
                style="@style/editTextFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_color_6a1b9a_1sdp_r_10sdp"
                android:hint="@string/number_weight"
                android:inputType="numberDecimal"
                tools:ignore="Autofill,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/numberPrice"
                style="@style/editTextFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_color_6a1b9a_1sdp_r_10sdp"
                android:hint="@string/number_price"
                android:inputType="numberDecimal"
                tools:ignore="Autofill,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/numberPercentage"
                style="@style/editTextFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_color_6a1b9a_1sdp_r_10sdp"
                android:hint="@string/number_percentage"
                android:inputType="numberDecimal"
                tools:ignore="Autofill,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/numberTotalPrice"
                style="@style/editTextFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_color_6a1b9a_1sdp_r_10sdp"
                android:hint="@string/number_rate"
                android:inputType="numberDecimal"
                tools:ignore="Autofill,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/finalPrice"
                style="@style/editTextFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_color_6a1b9a_1sdp_r_10sdp"
                android:hint="@string/final_price"
                android:inputType="numberDecimal"
                tools:ignore="Autofill,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editDetail"
                style="@style/editTextFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_color_6a1b9a_1sdp_r_10sdp"
                android:hint="@string/detail"
                android:inputType="textMultiLine"
                tools:ignore="Autofill,VisualLintTextFieldSize" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>