<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".uiComponents.activity.RawCutHistoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/SingleTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:hint="@string/search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:theme="@style/textViewAndEditText"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/enterDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/enter_details"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            tools:ignore="RelativeOverlap" />

    </LinearLayout>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:background="@color/black"
                android:layout_height="@dimen/_1sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_5sdp"
                    android:paddingVertical="@dimen/_1sdp"
                    android:text="@string/date"
                    android:theme="@style/textViewForTableLayout"
                    app:autoSizeMaxTextSize="@dimen/_15ssp"
                    app:autoSizeMinTextSize="@dimen/_10ssp"
                    app:autoSizeTextType="uniform"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_5sdp"
                    android:paddingVertical="@dimen/_1sdp"
                    android:text="@string/main_kat_no"
                    android:theme="@style/textViewForTableLayout"
                    app:autoSizeMaxTextSize="@dimen/_15ssp"
                    app:autoSizeMinTextSize="@dimen/_10ssp"
                    app:autoSizeTextType="uniform"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_5sdp"
                    android:paddingVertical="@dimen/_1sdp"
                    android:text="@string/no"
                    android:theme="@style/textViewForTableLayout"
                    app:autoSizeMaxTextSize="@dimen/_15ssp"
                    app:autoSizeMinTextSize="@dimen/_10ssp"
                    app:autoSizeTextType="uniform"
                    android:gravity="center"/>


            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPartyHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/list_of_history_layout" />


        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>